家具のウェブページを作成しました

--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>YuoTube</title>
-    <style>
-        .container {
-        display: flex;
-        background: gray;
-        }
-        .item {
-        background: #0bd;
-        color: #fff;
-        margin: 10px;
-        padding: 10px;
-        }
-        </style>
+    <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 4</div>
-        <div class="item">Item 5</div>
-        <div class="item">Item 6</div>
-        <div class="item">Item 7</div>
-        <div class="item">Item 8</div>
-        </div>
+    <h1>ご家庭にふさわしい商品が全て揃っています。</h1>
+    <p>当社の家具は、あなたを表現します。</p>
+    <h2>特別オファー</h2>
+    <h3>VILORAチェア</h3>
+    <p>やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
 </body>
 </html>
