--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ご家庭にふさわしい商品が全て揃っています。</h1>
-    <p>当社の家具は、あなたを表現します。</p>
-    <h2>特別オファー</h2>
-    <h3>VILORAチェア</h3>
-    <p>やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+    <header>
+        <img src="img/logo.svg" alt="ロゴ">
+        <input type="text">
+        <nav>
+            <a href="catalog.html">カタログ</a>
+            <a href="basket.html">カート</a>
+        </nav>
+    </header>
+    <section>
+        <h1>ご家庭にふさわしい商品が全て揃っています。</h1>
+        <p>当社の家具は、あなたを表現します。</p>
+        <a href="catalog.html">カタログへ移動</a>
+    </section>
+    <section>
+        <h2>特別オファー</h2>
+        <img src="img/product1.jpg" alt="">
+        <h3>VILORAチェア</h3>
+        <p>やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+        <p>21 000</p>
+        <p>28 000</p>
+    </section>
+
+    <footer>
+        <img src="img/logo.svg" alt="">
+        <h4>メニュー</h4>
+        <a href="index.html">ホームページ</a>
+        <a href="catalog.html">カタログ</a>
+        <a href="basket.html">カート</a>
+        <h4>お問い合わせ</h4>
+        <a href="tel:+">090-1234-5678</a>
+        <a href="mailto:">help@interier.com</a>
+        <img src="img/inst.svg" alt="インスタグラム">
+        <img src="img/twitter.svg" alt="ツイッター">
+        <img src="img/facebook.svg" alt="フェイスブック">
+        <form action="#">
+            <p>最新のニュースやアップデートをお届けします。</p>
+            <input type="email" name="" id="">
+            <button type="submit">登録する</button>
+
+        </form>
+    </footer>
+    
 </body>
 </html>
