--- a/extra/landing.html
+++ b/extra/landing.html
@@ -6,18 +6,49 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Coworking</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, fuga.</p>
-    <h3>Lorem, ipsum dolor.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequatur architecto ex incidunt sunt inventore deleniti recusandae officia reprehenderit quisquam.</p>
-    <h2>Features</h2>
-    <h4>Supports All Currencies and Cards</h4>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
-    <h2>Stay focused on saving money</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos tenetur veritatis voluptatem voluptates corporis mollitia reprehenderit in ducimus id. Qui?</p>
-    <h2>Contacts</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt!</p>
-    <p>Copyright 2022 CoWo</p>
-
+    <header>
+        <a href="imglanding/logo_landing.svg"></a>
+        <a href="">OVERVIEW FEATURES CONTACT</a>
+        <a href="">OVERVIEW FEATURES CONTACT</a>
+        <a href="">OVERVIEW FEATURES CONTACT</a>
+    </header>
+    <section>
+        <h1>Coworking</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, fuga.</p>
+        <button type="submit">Sign Up</button>
+    </section>
+    <section>
+        <h3>Lorem, ipsum dolor.</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequatur architecto ex incidunt sunt inventore deleniti recusandae officia reprehenderit quisquam.</p>
+        <a href="">Learn More</a>
+        <img src="imglanding/photo1landign.jpg" alt="">
+    </section>
+    <section>
+        <h2>Features</h2>
+        <img src="imglanding/features1.jpg" alt="">
+        <h4>Supports All Currencies and Cards</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+    </section>
+    <section>
+        <h2>Stay focused on saving money</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos tenetur veritatis voluptatem voluptates corporis mollitia reprehenderit in ducimus id. Qui?</p>
+        <img src="imglanding/stay.jpg" alt="">
+    </section>
+    <section>
+        <h2>Contacts</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt!</p>
+    </section>
+    <form action="">
+        <input type="text">
+        <input type="text">
+        <input type="number">
+        <section>
+            <option value="Select Coworking">Select Coworking</option>
+            <button type="submit">Submit Now</button>
+        </section>
+    </form>
+    <footer>
+        <p>Copyright 2022 CoWo</p>
+    </footer>
 </body>
 </html>
