テキストを追加しました

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ホームページ</title>
 </head>
 <body>
     <header>
-        <img src="img/logo.svg" alt="ロゴ">
-        <input type="text">
+        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
+        <form action="#">
+            <input type="text">
+        </form>
         <nav>
             <a href="catalog.html">カタログ</a>
             <a href="basket.html">カート</a>
@@ -29,7 +31,7 @@
     </section>
 
     <footer>
-        <img src="img/logo.svg" alt="">
+        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
         <h4>メニュー</h4>
         <a href="index.html">ホームページ</a>
         <a href="catalog.html">カタログ</a>
@@ -37,9 +39,9 @@
         <h4>お問い合わせ</h4>
         <a href="tel:+">090-1234-5678</a>
         <a href="mailto:">help@interier.com</a>
-        <img src="img/inst.svg" alt="インスタグラム">
-        <img src="img/twitter.svg" alt="ツイッター">
-        <img src="img/facebook.svg" alt="フェイスブック">
+        <a href="#"><img src="img/inst.svg" alt="インスタグラム"></a>
+        <a href="#"><img src="img/twitter.svg" alt="ツイッター"></a>
+        <a href="#"><img src="img/facebook.svg" alt="フェイスブック"></a>
         <form action="#">
             <p>最新のニュースやアップデートをお届けします。</p>
             <input type="email" name="" id="">
