--- a/catalog.html
+++ b/catalog.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>YuoTube</title>
+    <title>カタログ</title>
 </head>
 <body>
     <header>
-        <img src="img/logo.svg" alt="ロゴ">
+        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
         <input type="text">
         <nav>
             <a href="catalog.html">カタログ</a>
@@ -23,7 +23,7 @@
         <p>21 000</p>
     </section>
     <footer>
-        <img src="img/logo.svg" alt="">
+        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
         <h4>メニュー</h4>
         <a href="index.html">ホームページ</a>
         <a href="catalog.html">カタログ</a>
@@ -31,9 +31,9 @@
         <h4>お問い合わせ</h4>
         <a href="tel:+">090-1234-5678</a>
         <a href="mailto:">help@interier.com</a>
-        <img src="img/inst.svg" alt="インスタグラム">
-        <img src="img/twitter.svg" alt="ツイッター">
-        <img src="img/facebook.svg" alt="フェイスブック">
+        <a href="#"><img src="img/inst.svg" alt="インスタグラム"></a>
+        <a href="#"><img src="img/twitter.svg" alt="ツイッター"></a>
+        <a href="#"><img src="img/facebook.svg" alt="フェイスブック"></a>
         <form action="#">
             <p>最新のニュースやアップデートをお届けします。</p>
             <input type="email" name="" id="">
