--- a/extra/landing.html
+++ b/extra/landing.html
@@ -4,38 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="imglanding/logo_landing.svg"></a>
-        <a href="">OVERVIEW FEATURES CONTACT</a>
-        <a href="">OVERVIEW FEATURES CONTACT</a>
-        <a href="">OVERVIEW FEATURES CONTACT</a>
+        <a class="link-header" href="imglanding/logo_landing.svg"></a>
+        <a class="link-header" href="#">OVERVIEW</a>
+        <a class="link-header" href="#">FEATURES</a>
+        <a class="link-header" href="#">CONTACT</a>
     </header>
     <section>
-        <h1>Coworking</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, fuga.</p>
-        <button type="submit">Sign Up</button>
+        <h1 class="title">Coworking</h1>
+        <p class="text-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, fuga.</p>
+        <button class="button-signup" type="submit">Sign Up</button>
     </section>
     <section>
-        <h3>Lorem, ipsum dolor.</h3>
+        <h3 class="subtitle">Lorem, ipsum dolor.</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequatur architecto ex incidunt sunt inventore deleniti recusandae officia reprehenderit quisquam.</p>
-        <a href="">Learn More</a>
+        <a class="link" href="">Learn More</a><br>
         <img src="imglanding/photo1landign.jpg" alt="">
     </section>
     <section>
-        <h2>Features</h2>
+        <h2 class="subtitle">Features</h2>
         <img src="imglanding/features1.jpg" alt="">
         <h4>Supports All Currencies and Cards</h4>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
     </section>
     <section>
-        <h2>Stay focused on saving money</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos tenetur veritatis voluptatem voluptates corporis mollitia reprehenderit in ducimus id. Qui?</p>
+        <h2 class="subtitle">Stay focused on saving money</h2>
+        <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos tenetur veritatis voluptatem voluptates corporis mollitia reprehenderit in ducimus id. Qui?</p>
         <img src="imglanding/stay.jpg" alt="">
     </section>
     <section>
-        <h2>Contacts</h2>
+        <h2 class="subtitle">Contacts</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, deserunt!</p>
     </section>
     <form action="">
