--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
         <form action="#">
             <input type="text">
