クラスの名前を変更しました

--- a/extra/landing.html
+++ b/extra/landing.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <a class="link-header" href="imglanding/logo_landing.svg"></a>
         <a class="link-header" href="#">OVERVIEW</a>
         <a class="link-header" href="#">FEATURES</a>
@@ -19,16 +19,16 @@
         <button class="button-signup" type="submit">Sign Up</button>
     </section>
     <section>
-        <h3 class="subtitle">Lorem, ipsum dolor.</h3>
+        <h3 class="subtitle-first">Lorem, ipsum dolor.</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque consequatur architecto ex incidunt sunt inventore deleniti recusandae officia reprehenderit quisquam.</p>
         <a class="link" href="">Learn More</a><br>
         <img src="imglanding/photo1landign.jpg" alt="">
     </section>
     <section>
-        <h2 class="subtitle">Features</h2>
+        <h2 class="subtitle-second">Features</h2>
         <img src="imglanding/features1.jpg" alt="">
-        <h4>Supports All Currencies and Cards</h4>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+        <h4 class="subtitle-third">Supports All Currencies and Cards</h4>
+        <p class="text-seven">Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
     </section>
     <section>
         <h2 class="subtitle">Stay focused on saving money</h2>
@@ -48,7 +48,7 @@
             <button type="submit">Submit Now</button>
         </section>
     </form>
-    <footer>
+    <footer class="footer">
         <p>Copyright 2022 CoWo</p>
     </footer>
 </body>
