--- a/index.html
+++ b/index.html
@@ -14,41 +14,41 @@
         <form action="#">
             <input type="text">
         </form>
-        <nav>
-            <a class="header-link" href="catalog.html">カタログ</a>
-            <a class="header-link" href="basket.html">カート</a>
+        <nav class="menu">
+            <a class="menu_link" href="catalog.html">カタログ</a>
+            <a class="menu_link" href="basket.html">カート</a>
         </nav>
     </header>
-    <section>
+    <section class="top">
         <h1 class="title">ご家庭にふさわしい商品が全て揃っています。</h1>
-        <p class="header-paragraph">当社の家具は、あなたを表現します。</p>
-        <a class="link-catalog" href="catalog.html">カタログへ移動</a>
+        <p class="top_text">当社の家具は、あなたを表現します。</p>
+        <a class="top_link" href="catalog.html">カタログへ移動</a>
     </section>
     <section>
-        <h2 class="subtitle">特別オファー</h2>
-        <img src="img/product1.jpg" alt="">
-        <h3 class="title-product">VILORAチェア</h3>
-        <p class="product-description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
-        <p class="price-new">21 000</p>
-        <p class="price-old">28 000</p>
+        <h2 class="heading">特別オファー</h2>
+        <img src="img/product1.jpg" alt="商品写真">
+        <h3 class="product_heading">VILORAチェア</h3>
+        <p class="product_description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+        <p class="price">21 000</p>
+        <p class="price price_old">28 000</p>
     </section>
 
     <footer>
         <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
-        <h4 class="title-footer">メニュー</h4>
-        <a class="link-footer" href="index.html">ホームページ</a>
-        <a class="link-footer" href="catalog.html">カタログ</a>
-        <a class="link-footer" href="basket.html">カート</a>
-        <h4 class="title-footer">お問い合わせ</h4>
-        <a class="link-footer" href="tel:+">090-1234-5678</a>
-        <a class="link-footer" href="mailto:">help@interier.com</a>
+        <h4 class="footer_heading">メニュー</h4>
+        <a class="footer_link" href="index.html">ホームページ</a>
+        <a class="footer_link" href="catalog.html">カタログ</a>
+        <a class="footer_link" href="basket.html">カート</a>
+        <h4 class="footer_heading">お問い合わせ</h4>
+        <a class="footer_link" href="tel:+">090-1234-5678</a>
+        <a class="footer_link" href="mailto:">help@interier.com</a>
         <a href="#"><img src="img/inst.svg" alt="インスタグラム"></a>
         <a href="#"><img src="img/twitter.svg" alt="ツイッター"></a>
         <a href="#"><img src="img/facebook.svg" alt="フェイスブック"></a>
-        <form action="#">
-            <p class="form-footer">最新のニュースやアップデートをお届けします。</p>
-            <input class="form-input-footer" type="email" name="" id="">
-            <button class="button-footer" type="submit">登録する</button>
+        <form class="form" action="#">
+            <p class="form_text">最新のニュースやアップデートをお届けします。</p>
+            <input class="form_email" type="email" name="" id="">
+            <button class="form_button" type="submit">登録する</button>
 
         </form>
     </footer>
