--- a/index.html
+++ b/index.html
@@ -5,52 +5,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ホームページ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="header">
-        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
-        <form action="#">
-            <input type="text">
-        </form>
-        <nav class="menu">
-            <a class="menu_link" href="catalog.html">カタログ</a>
-            <a class="menu_link" href="basket.html">カート</a>
-        </nav>
-    </header>
-    <section class="top">
-        <h1 class="title">ご家庭にふさわしい商品が全て揃っています。</h1>
-        <p class="top_text">当社の家具は、あなたを表現します。</p>
-        <a class="top_link" href="catalog.html">カタログへ移動</a>
-    </section>
-    <section>
+    <div class="top center">
+        <header class="header">
+            <a class="header_link" href="index.html">インテリア。</a>
+                <input placeholder="検索"
+                class="header_input" type="text">
+            <nav class="menu">
+                <a class="menu_link" href="catalog.html">カタログ</a>
+                <a class="menu_link" href="basket.html">カート</a>
+            </nav>
+        </header>
+        <section class="top_content">
+            <h1 class="title">ご家庭にふさわしい商品が全て揃っています。</h1>
+            <p class="top_text">当社の家具は、あなたを表現します。</p>
+            <a class="top_link" href="catalog.html">カタログへ移動</a>
+        </section>
+    </div>
+    <div class="for_box center">
+        <h2 class="heading">... 用家具</h2>
+        <div class="for">
+            <div class="for_item for_item_1 for_item_big">休憩</div>
+            <div class="for_item for_item_2 for_item_big">仕事</div>
+            <div class="for_item for_item_3">キッチン</div>
+            <div class="for_item for_item_4">子供部屋</div>
+            <div class="for_item for_item_5">浴室</div>
+        </div>
+    </div>
+    <div class="product-box center">
         <h2 class="heading">特別オファー</h2>
-        <img src="img/product1.jpg" alt="商品写真">
-        <h3 class="product_heading">VILORAチェア</h3>
-        <p class="product_description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
-        <p class="price">21 000</p>
-        <p class="price price_old">28 000</p>
-    </section>
+        <div class="product_content">
+            <div class="product">
+                <img src="img/product1.jpg" alt="商品写真">
+                <h3 class="product_heading">VILORAチェア</h3>
+                <p class="product_description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+                <div class="product_box_price">
+                    <span class="product_price">21 000</span>
+                    <span class="product_price product_price_old">28 000</span>
+                </div>
+            </div>
+            <div class="product">
+                <img src="img/product1.jpg" alt="商品写真">
+                <h3 class="product_heading">VILORAチェア</h3>
+                <p class="product_description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+                <div class="product_box_price">
+                    <span class="product_price">21 000</span>
+                    <span class="product_price product_price_old">28 000</span>
+                </div>
+            </div>
+            <div class="product">
+                <img src="img/product1.jpg" alt="商品写真">
+                <h3 class="product_heading">VILORAチェア</h3>
+                <p class="product_description">やわらかくて居心地の良い、整然とした、おしゃれな家具。弾力のあるクッション、座面、そして心地よい生地。</p>
+                <div class="product_box_price">
+                    <span class="product_price">21 000</span>
+                    <span class="product_price product_price_old">28 000</span>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <footer>
-        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
-        <h4 class="footer_heading">メニュー</h4>
-        <a class="footer_link" href="index.html">ホームページ</a>
-        <a class="footer_link" href="catalog.html">カタログ</a>
-        <a class="footer_link" href="basket.html">カート</a>
-        <h4 class="footer_heading">お問い合わせ</h4>
-        <a class="footer_link" href="tel:+">090-1234-5678</a>
-        <a class="footer_link" href="mailto:">help@interier.com</a>
-        <a href="#"><img src="img/inst.svg" alt="インスタグラム"></a>
-        <a href="#"><img src="img/twitter.svg" alt="ツイッター"></a>
-        <a href="#"><img src="img/facebook.svg" alt="フェイスブック"></a>
-        <form class="form" action="#">
-            <p class="form_text">最新のニュースやアップデートをお届けします。</p>
-            <input class="form_email" type="email" name="" id="">
-            <button class="form_button" type="submit">登録する</button>
-
-        </form>
+    <footer class="footer center">
+        <a class="footer_link_logo" href="index.html">インテリア。</a>
+        <div class="footer_content">
+            <div class="footer_info">
+               <nav class="footer_item">
+                    <h4 class="footer_heading">メニュー</h4>
+                    <a class="footer_link" href="index.html">ホームページ</a>
+                    <a class="footer_link" href="catalog.html">カタログ</a>
+                    <a class="footer_link" href="basket.html">カート</a>
+               </nav>
+                <div class="footer_item">
+                    <h4 class="footer_heading">お問い合わせ</h4>
+                    <a class="footer_link" href="tel:+">090-1234-5678</a>
+                    <a class="footer_link" href="mailto:">help@interier.com</a>
+                    <div class="footer_icons">
+                        <a href="#"><img src="img/inst.svg" alt="インスタグラム"></a>
+                        <a href="#"><img src="img/twitter.svg" alt="ツイッター"></a>
+                        <a href="#"><img src="img/facebook.svg" alt="フェイスブック"></a>
+                    </div>
+                </div>
+            </div>
+            <form class="form" action="#">
+                <p class="form_text">最新のニュースやアップデートをお届けします。</p>
+                <input class="form_email" type="email" placeholder="メールアドレス">
+                <button class="form_button" type="submit">登録する</button>
+            </form>
+        </div>
     </footer>
 
 </body>
